fixed button alignment

--- a/src/app/common/components/AppRoot/NavTray.scss
+++ b/src/app/common/components/AppRoot/NavTray.scss
@@ -11,7 +11,7 @@
 	background-color: #eaeaea;
 }
 .nav-tray_2tc8 > li {
-	width: 25%;
+	width: 20%;
 	text-align: center;
 }
 .nav-tray_2tc8 > li > button {
